--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ email: my.little.dev.blog@gmail.com
 description: A space for me to share learnings as I build software.
 baseurl: "/site"
 url: "https://my-little-dev-blog.github.io"
+plugins:
+  - jekyll-sitemap
+
