--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ baseurl: "/site"
 url: "https://my-little-dev-blog.github.io"
 plugins:
   - jekyll-sitemap
-theme: primer
+theme: jekyll-theme-primer
