--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ remote_theme: pages-themes/primer
 plugins:
   - jekyll-sitemap
   - jekyll-remote-theme
-show_downloads: "true"
+show_downloads: true
